--- a/src/vistas/ProductoVista.form
+++ b/src/vistas/ProductoVista.form
@@ -46,8 +46,6 @@
                                       <EmptySpace type="unrelated" max="-2" attributes="0"/>
                                       <Group type="103" groupAlignment="0" attributes="0">
                                           <Component id="jtfId" min="-2" pref="69" max="-2" attributes="0"/>
-                                          <Component id="jtfNombre" min="-2" pref="69" max="-2" attributes="0"/>
-                                          <Component id="jtfPrecio" alignment="0" min="-2" pref="51" max="-2" attributes="0"/>
                                           <Component id="jcbEstado" alignment="0" min="-2" max="-2" attributes="0"/>
                                           <Component id="jbBorrar" alignment="1" min="-2" max="-2" attributes="0"/>
                                       </Group>
@@ -55,6 +53,13 @@
                                   <Group type="102" alignment="0" attributes="0">
                                       <EmptySpace min="-2" pref="114" max="-2" attributes="0"/>
                                       <Component id="jbBuscar" min="-2" max="-2" attributes="0"/>
+                                  </Group>
+                                  <Group type="102" alignment="1" attributes="0">
+                                      <EmptySpace max="-2" attributes="0"/>
+                                      <Group type="103" groupAlignment="0" attributes="0">
+                                          <Component id="jtfNombre" alignment="1" min="-2" pref="169" max="-2" attributes="0"/>
+                                          <Component id="jtfPrecio" alignment="1" min="-2" pref="169" max="-2" attributes="0"/>
+                                      </Group>
                                   </Group>
                               </Group>
                           </Group>
@@ -98,7 +103,7 @@
                   <Component id="jLabel5" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="jcbEstado" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace pref="44" max="32767" attributes="0"/>
+              <EmptySpace pref="48" max="32767" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
                   <Component id="jbGuardar" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="jbBorrar" alignment="3" min="-2" max="-2" attributes="0"/>
